  AT_AP_CO_B .description

  AntyExoskeleton_Production .description

  Refleum .description

  AT_Halberd .description
  AT_Hammer .description
  AT_AcidCross .description

AlienRace.BackstoryDef
  Anty_Amigo_B_Meleeinfantry .baseDescription
  Anty_Amigo_B_Meleeinfantry_Drop .baseDescription

'Add'
ThingDef
  Anty_prototype .description
  AntyExoskeleton .description
  Antypheromone_Charge .description
  Antypheromone_Suicide .description

AlienRace.ThingDef_AlienRace
  Anty .description

RulePackDef
  NamerFactionAnty.rulePack.rulesStrings.17
  ~
  NamerFactionAnty.rulePack.rulesStrings.24

(2022/02/21)
ThingDef
  AT_hydroheliumion_D .label .description .tools.0.label
  Bullethydroheliumion_D .label
  Filth_ApproachSmoke_A .label

PawnKindDef
  AT_Launcher_B .label
  AT_Power_A_B  .label
  AT_Power_A_C  .label

HediffDef
  AT_LarvaLearningAid .label .description

(2022/03/23)
PawnKindDef
  AT_Rifle_B_title  .label
  AT_PP_S_title .label
  Anty_Commander_title  .label
  AT_Launcher_A_title .label

(2022/04/15)
ThingDef
  AT_Apparel_bunker .label .description .comps.CompReloadable.chargeNoun .verbs.0.label
  AT_Apparel_orbitalbombardment .label .description .comps.CompReloadable.chargeNoun .verbs.0.label

(2022/04/23)
TerrainDef
  DeteriorationFloorA .label .description

(2022/05/18)
PawnKindDef
  Anty_prototype_Wild .label

ThingDef
  Anty_prototype_Wild.label .tools.0.label .tools.1.label

FactionDef
  ProtyHive .label .description .pawnSingular .pawnsPlural .fixedName .leaderTitle

TraderKindDef
  Caravan_Proty .label
  
(2022/06/14)
ThingDef
  AT_AP_Power_A .comps.CompReloadable.chargeNoun .verbs.0.label
  AT_AP_Power_B .comps.CompReloadable.chargeNoun .verbs.0.label
  AT_AP_Power_C .comps.CompReloadable.chargeNoun
  AT_AP_Power_D .comps.CompReloadable.chargeNoun
  AT_RandomBox .label .description

HediffDef
  AT_Acceleration .label .description

PawnKindDef
  Tribal_Proty .label

BackstoryDef
  Proty_Doll .title .titleShort .baseDescription